--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "1914fund",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/MaliaWakeshoAjwang/1914fund",
+  "homepage": "https://MaliaWakeshoAjwang.github.io/1914fund",
   "dependencies": {
     "cra-template": "1.2.0",
     "react": "^19.0.0",
@@ -38,6 +38,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "gh-pages": "^6.3.0"
   }
 }
