--- a/client/package.json
+++ b/client/package.json
@@ -20,17 +20,20 @@
     "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.4",
     "ag-grid-react": "^33.0.4",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.473.0",
     "papaparse": "^5.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^7.1.3",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
@@ -38,6 +41,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/leaflet": "^1.9.8",
     "@types/node": "^22.10.7",
     "@types/papaparse": "^5.3.15",
     "@types/react": "^18.3.18",
