--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,13 +6,15 @@
     "@headlessui/react": "^2.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-navigation-menu": "^1.2.3",
-    "@radix-ui/react-popover": "^1.1.4",
+    "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-select": "^2.1.4",
-    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.4",
     "ag-grid-react": "^33.0.4",
@@ -21,11 +23,14 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "cra-template-typescript": "1.2.0",
+    "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.5.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.473.0",
     "papaparse": "^5.5.1",
     "react": "^18.3.1",
+    "react-calendar": "^5.1.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
     "react-leaflet": "^4.2.1",
@@ -70,6 +75,7 @@
     "@types/react-dom": "^18.3.5",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.17.0",
+    "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
