--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
     "react-leaflet": "^4.2.1",
+    "react-leaflet-cluster": "^2.1.0",
     "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
     "tailwind-merge": "^2.6.0",
@@ -68,7 +69,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@eslint/js": "^9.17.0",
-    "@types/leaflet": "^1.9.8",
+    "@types/leaflet": "^1.9.17",
     "@types/node": "^22.12.0",
     "@types/papaparse": "^5.3.15",
     "@types/react": "^18.3.18",
